Fixed localStorage issues

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <p>Keeper</p>
         </div>
         <div class="text">
-            <textarea id="textarea" class="textarea" v-model="name" placeholder="Write your text here..."></textarea>
+            <textarea id="textarea" class="textarea" v-model="store" placeholder="Write your text here..."></textarea>
         </div>
 
     </div>
