--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 
             }
             document.getElementById("textarea").classList.toggle("dark");
-            document.getElementById("topbar").classList.toggle("dark");
+            document.getElementById("topbar").classList.toggle("topbardark");
         }
     </script>
     <title>Keeper | Keep all your notes in one place</title>
